Fixed Mobile Design Navigation.css was adjusted to format correctly on mobile

--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -32,3 +32,19 @@
     width: 10rem;
     margin: auto;
 }
+
+@media only screen and (max-width: 600px) {
+
+    .card {
+        flex-direction: column-reverse;
+    }
+
+    .card .content {
+        font-size: x-large;
+    }
+
+    .card img.show {
+        margin-bottom: 50px;
+    }
+
+}
