--- a/src/components/css/Navigation.css
+++ b/src/components/css/Navigation.css
@@ -1,6 +1,6 @@
 .Navigation {
 
-    height: 70px;
+    height: 65px;
     display: flex;
     flex-direction: row;
     background-color: #3F3F4A;
@@ -11,6 +11,8 @@
 }
 
 .Navigation a, .Navigation button {
+    padding: 5px;
+    height: 55px;
     border: none;
     color: #CFC0C0 !important;
     display: flex;
@@ -19,12 +21,13 @@
     justify-content: space-around;
     padding-left: 10px;
     padding-right: 10px;
-    height:70px;
     transition: background-color 250ms ease-in, height 250ms ease-in;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     z-index: 10;
     background-color: inherit;
+    text-align:center;
+
 }
 
 .Navigation a:hover, .Navigation button:hover {
@@ -38,4 +41,11 @@
 .Navigation .end {
     margin-left: auto;
     margin-right: 25px;
+}
+
+.Navigation svg {
+    margin-top: auto;
+    margin-bottom: 4px;
+    height: 24px;
+    width: 24px;
 }
